--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,10 @@ install:
     - pipenv install
 script:
     - pipenv run pelican content
+deploy:
+    provider: pages
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN
+    on:
+        branch: master
+    local_dir: output
