--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
     - pipenv install
 script:
     - pipenv run pelican content
+    - echo $GITHUB_TOKEN
 deploy:
   provider: pages
   repo: openclassmates/openclassmates
