--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ install:
     - pip3 install pipenv
     - pipenv install
 script:
-    - pipenv run pelican content
+    - pipenv run fab publish
+after_failure:
+    - 'if [ "$TRAVIS_PULL_REQUEST" = "false"  ]; then pipenv run fab revert; fi'
 deploy:
   provider: pages
   repo: PythonClassmates/pythonclassmates.org
