--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ python:
 install:
     - pip3 install -r requirements.txt
 script:
-    - fab -e publish
-after_failure:
-    - fab -e revert
+    - pelican content 
 deploy:
   provider: pages
   repo: PythonClassmates/pythonclassmates.org
