--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
     - pip3 install -r requirements.txt
 script:
-    - pelican --fatal=warnings content 
+    - pelican content --fatal=warnings -s publishconf.py
 deploy:
   provider: pages
   repo: PythonClassmates/pythonclassmates.org
