Configured Travis to revert last commit in case of errors if not in a pull request.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
     - pip3 install -r requirements.txt
 script:
     - make publish
+after_failture:
+    - make revert
 deploy:
   provider: pages
   repo: PythonClassmates/pythonclassmates.org
