--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
     - pip3 install -r requirements.txt
 script:
     - make publis
-after_failture:
+after_failure:
     - make revert
 deploy:
   provider: pages
