--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
     - pip3 install -r requirements.txt
 script:
-    - make publis
+    - make publish
 after_failure:
     - make revert
 deploy:
