--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
     - pip3 install -r requirements.txt
 script:
+    - git clone https://github.com/alexandrevicenzi/Flex.git themes/flex
     - make publish
 after_failure:
     - make revert
