--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: python
 python:
     - "3.6"
 install:
-    - pip3 install -r requirements.txt
+    - pip3 install pipenv
+    - pip3 install
 script:
     - git clone https://github.com/alexandrevicenzi/Flex.git theme/active
     - make publish
