--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
     - pipenv install
 script:
     - git clone https://github.com/alexandrevicenzi/Flex.git theme/active
-    - make publish
+    - pipenv run invoke publish
 after_failure:
     - make revert
 deploy:
